--- a/.github/workflows/crewai-full-automation.yaml
+++ b/.github/workflows/crewai-full-automation.yaml
@@ -58,7 +58,7 @@ jobs:
           awk -v diff="$DIFF" '{gsub("{{DIFF}}", diff)}1' crewai.yaml > temp.yaml && mv temp.yaml crewai.yaml
 
       - name: Run CrewAI using CLI
-        run: crewai run crewai.yaml
+        run: crewai run
 
       - name: Commit generated .tf files
         run: |
