--- a/.github/workflows/crewai-full-automation.yaml
+++ b/.github/workflows/crewai-full-automation.yaml
@@ -88,6 +88,12 @@ jobs:
         working-directory: terraform
         run: terraform init
 
+    - name: Debug kubeconfig content
+      run: |
+        echo "$KUBE_CONFIG_DATA" | base64 -d
+        echo "------------"
+        echo "$KUBECONFIG"
+
       - name: Terraform Apply
         working-directory: terraform
         run: terraform apply -auto-approve
