--- a/.github/workflows/crewai-full-automation.yaml
+++ b/.github/workflows/crewai-full-automation.yaml
@@ -100,6 +100,9 @@ jobs:
               token: ${ACCESS_TOKEN}
           EOF
 
+      - name: Set Google Application Credentials for Terraform
+        run: echo "GOOGLE_APPLICATION_CREDENTIALS=${HOME}/gcp-key.json" >> $GITHUB_ENV
+
       - name: Set KUBECONFIG env var
         run: echo "KUBECONFIG=$GITHUB_WORKSPACE/ci-kubeconfig.yaml" >> $GITHUB_ENV
 
